--- a/partner.html
+++ b/partner.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XenonXploits</title>
-  <link rel="icon" href="img/xe.png" />
-  <link rel="shortcut icon" href="img/xe.png" />
-  <link rel="stylesheet" href="/css/style.css">
-  <style>
+<link rel="stylesheet" href="css/style.css">
+<style>
     #other {
        border: 5px solid black;
       padding: 15px;
@@ -89,35 +79,47 @@ background-color: #383838;
   .partner-text h2 {
     font-size: 20px;
   }
-  </style>
-</head>
-
-<body>
-  <div align="center">
-
-
-    <h1>xenonxploits.</h1>
-    <h2>the web is our enemy</h2>
-    <hr />
-
-    <button id="start-button" onclick="location.href='/xploitfiles'">Get Started</button>
-    <hr>
-    <br>
-    <br>
-    <button id="credit-button" onclick="location.href = 'creds.html'">Credits</button>
-    <hr>
-    <br>
-
-    <br>
-    <div>
-      <button id="other" onclick="location='partner.html'">Partners</button>
-    <div>
-      <br>
-      <hr>
-      <br>
-      <button id="other" onclick="location.href='/xploitfiles/other/exploits.html'">Other exploits</button>
+</style>
+<div>
+  <h1>
+    <center>
+      Xenon Partners.
+    </center>
+  </h1>
+  <hr>
+  <center>
+    <div class="partner">
+      <div class="img">
+        <img src="https://storage.googleapis.com/replit/images/1658283740570_34fb4831253be71c7ec43bf3f5b464de.png">
+      </div>
+      <div class="partner-text">
+        <h2>Guaranteed speeds!</h2>
+        <p>
+          Totally science offers extremely fast speeds.
+        </p>
+        <h2>
+          In-site rewards!
+        </h2>
+        <p>
+          On their site you can level up and get rewards for you just being there!
+        </p>
+        <h2>
+          Games, apps, and more!
+        </h2>
+        <p>
+          With games, apps, proxies, many free links, you can assure that no teacher is going to stop you.
+        </p>
+        <hr>
+        <button id="other">Join now!</button>
+        <br>
+        <br>
+      <button id="start-button">Free link</button>
+      </div>
+      <script>
+        document.querySelector("#other").onclick = () => location = "https://discord.gg/totallyscience";
+        document.querySelector("#start-button").onclick = () => location = "https://totallyscience.co/";
+      </script>
     </div>
-  </div>
-</body>
-
-</html>
+  </center>
+</div>
+<h3>DM justj_rdanalt_ernative or justj_rdan to request to put your ad on this site.</h3>
