--- a/xploitfiles/gg.html
+++ b/xploitfiles/gg.html
@@ -54,8 +54,9 @@
   <div align="center">
     <h1>GoUnblock</h1>
     <h2>By<span>pass</span>ing using iframes.</h2>
+    <form>
     <input class="input" type="text" placeholder="GoUnblock The Web!" id="input"
       onkeydown="if(event.key===&quot;Enter&quot;) create()">
+      </form>
 </body>
-
 </html>
