--- a/xploitfiles/iboss.html
+++ b/xploitfiles/iboss.html
@@ -1,13 +1,26 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Xenon - IBoss</title>
+    <link rel="icon" href="/img/xe.png" />
+	<link rel="shortcut icon" href="/img/xe.png" />
   <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <iframe src="https://web.archive.org/" style="position:fixed;top:0;bottom:0;left:0;right:0;width:100%;height:100%;border:none;margin:0;padding:0;z-index:999999;">Your browser does not support iframes</iframe>
+  <h1>
+    <div class="iBoss">
+<center>
+iBoss Exploit
+</center>
+    </div>
+  </h1>
+  <center><p>Go to <a target="_blank" href="ibossex.html">this link</a> on that page press the "hi" link<br> and it should open a blank page, bookmark the code from <br> <a target="_blank" href="https://spacesaver.github.io/Ingot-for-iBoss/">here</a><br>
+    Then return to the blank page and run the bookmarklet, this will allow you to disable admin/regular extensions.
+  
+  </p></center>
 </body>
+
 </html>
