--- a/xploitfiles/lightspeed.html
+++ b/xploitfiles/lightspeed.html
@@ -1,22 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Xenon - Lightspeed</title>
-   <link rel="icon" href="/img/xe.png" />
-	<link rel="shortcut icon" href="/img/xe.png" />
-     <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" href="/img/xe.png" />
+  <link rel="shortcut icon" href="/img/xe.png" />
+  <link rel="stylesheet" href="/css/style.css">
+  <center><h1>
+Put Your URL Below, and press open.
+  </h1></center>
 </head>
-<body>
-  
-</body>
-  <script>
-var url = prompt("insert url here");
-if (!url.startsWith("https://") && !url.startsWith("//") && url != "") {
+  <div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+   <center><input id="url" placeholder="Put Url Here"><button onclick="myFunction()">Open Page</button></center>
+  </div>
+<script>
+  function myFunction(){
+  var url = document.getElementById("url").value;
+  if (!url.startsWith("https://") && !url.startsWith("//") && url != "") {
     url = "https://" + url
+  }
+  document.body.innerHTML = '<iframe src="' + (url) + '"width="100%"height="100%" style="position:absolute;top:0;left:0;"frameborder="0">Your browser doesn\'t support iframes:(</iframe>'
+  }
+</script>
+<style>
+input {
+  transition-duration: 1.2s;
+  padding: 13px; 
+  margin: 13px;
+  width: 350px;
+  border-radius: 20px;
 }
-document.body.innerHTML = '<iframe src="' + (url) + '"width="100%"height="100%" style="position:absolute;top:0;left:0;"frameborder="0">Your browser doesn\'t support iframes:(</iframe>'
-  </script>
+  input:focus {
+    width: 650px;
+  }
+  button {
+    border-radius: 15px;
+    padding: 15px; 
+    cursor: pointer;
+  }
+</style>
 </html>
