--- a/xploitfiles/sh1mmer.html
+++ b/xploitfiles/sh1mmer.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="monetag" content="4abbb0f43c75a200e93f0b19f3fa1de7">
   <title>Sh1mmer Mirror</title>
   <link rel="stylesheet" href="style.css">
 </head>
